src/test/ui/consts/miri_unleashed/const_refers_to_static.stderr
warning: skipping const checks
  --> $DIR/const_refers_to_static.rs:13:1
   |
LL | / const MUTATE_INTERIOR_MUT: usize = {
LL | |
LL | |     static FOO: AtomicUsize = AtomicUsize::new(0);
LL | |     FOO.fetch_add(1, Ordering::Relaxed)
LL | | };
   | |__^

warning: skipping const checks
  --> $DIR/const_refers_to_static.rs:19:1
   |
LL | / const READ_INTERIOR_MUT: usize = {
LL | |
LL | |     static FOO: AtomicUsize = AtomicUsize::new(0);
LL | |     unsafe { *(&FOO as *const _ as *const usize) }
LL | | };
   | |__^

warning: skipping const checks
  --> $DIR/const_refers_to_static.rs:26:1
   |
LL | const READ_MUT: u32 = unsafe { MUTABLE };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:30:5
   |
LL |     MUTATE_INTERIOR_MUT;
   |     ^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:32:5
   |
LL |     READ_INTERIOR_MUT;
   |     ^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:34:5
   |
LL |     READ_MUT;
   |     ^^^^^^^^ referenced constant has errors

error: aborting due to 3 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0080`.
